<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="407dp"
        android:layout_height="0dp"
        android:background="@drawable/newbackground"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/newbackground" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="413dp"
        android:layout_height="211dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/dicee_logo" />

    <ImageView
        android:id="@+id/image_leftDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/dice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/image_rightDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/dice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/image_leftDice"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:srcCompat="@drawable/dice2" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:text="@string/Roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_leftDice"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/somaButton"
        android:layout_width="105dp"
        android:layout_height="61dp"
        android:text="@string/somaButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/rollButton"
        app:layout_constraintTop_toBottomOf="@+id/image_rightDice"
        app:layout_constraintVertical_bias="0.108" />

</androidx.constraintlayout.widget.ConstraintLayout>